versioned_docs/version-4.0.x/reference/functions/Dismount-ADTWimFile.mdx
---
id: Dismount-ADTWimFile
title: Dismount-ADTWimFile
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Dismounts a WIM file from the specified mount point.

## SYNTAX

### ImagePath

```powershell
Dismount-ADTWimFile -ImagePath <FileInfo[]> [<CommonParameters>]
```

### Path

```powershell
Dismount-ADTWimFile -Path <DirectoryInfo[]> [<CommonParameters>]
```

## DESCRIPTION

The Dismount-ADTWimFile function dismounts a WIM file from the specified mount point and discards all changes.
This function ensures that the specified path is a valid WIM mount point before attempting to dismount.

## EXAMPLES

### EXAMPLE 1

```powershell
Dismount-ADTWimFile -ImagePath 'C:\Path\To\File.wim'
```

This example dismounts the WIM file from all its mount points and discards all changes.

### EXAMPLE 2

```powershell
Dismount-ADTWimFile -Path 'C:\Mount\WIM'
```

This example dismounts the WIM file from the specified mount point and discards all changes.

## PARAMETERS

### -ImagePath

The path to the WIM file.

```yaml
Type: FileInfo[]
Parameter Sets: ImagePath
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Path

The path to the WIM mount point.

```yaml
Type: DirectoryInfo[]
Parameter Sets: Path
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not return any objects.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[Dismount-ADTWimFile](./Dismount-ADTWimFile.mdx)
